[package]
name = "jos"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[profile.release]
strip = true
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1

[[bin]]
name = "jos"
path = "src/main.rs"
test = false
bench = false
doctest = false
